--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -9,9 +9,9 @@
 <body>
     <p class="rps">Rock Paper Scissors</p>
 
-    <button onclick="playGame('rock');" class="move-button"><img src="rock-emoji.png" class="move-icon"></button>
-    <button onclick="playGame('paper');" class="move-button"><img src="paper-emoji.png" class="move-icon"></button>
-    <button onclick="playGame('scissors');" class="move-button"><img src="scissors-emoji.png"
+    <button class="move-button js-rock-button"><img src="rock-emoji.png" class="move-icon"></button>
+    <button class="move-button js-paper-button"><img src="paper-emoji.png" class="move-icon"></button>
+    <button class="move-button js-scissors-button"><img src="scissors-emoji.png"
             class="move-icon"></button>
     <p class="js-result result"></p>
     <p class="js-moves"></p>
