--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -16,15 +16,10 @@
     <p class="js-result result"></p>
     <p class="js-moves"></p>
     <p class="js-score score"></p>
-    <button onclick="
-        score.wins=0;
-        score.losses=0;
-        score.ties=0;
-        localStorage.removeItem('score');
-        updateScoreElement();
-        document.querySelector('.js-result').innerHTML='';document.querySelector('.js-score').innerHTML='';document.querySelector('.js-moves').innerHTML='';
-        " class="reset">Reset score</button>
-        <button class="js-auto-play auto-play" onclick="autoPlay();">Auto Play</button>
+    <button class="js-reset reset">Reset score</button>
+    <button class="js-auto-play auto-play">Auto Play</button>
+    <p class="confirm"></p>
+    
 
 
     <script src="rock-paper-scissors.js">
